--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^1.0.3",
     "better-sqlite3": "^4.1.0",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "mssql": "^4.1.0",
+    "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
