--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^4.1.0",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
