--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-beta.3",
-    "debug": "~2.6.9",
+    "debug": "^3.1.0",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "moment": "^2.20.1",
