--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "debug": "^3.1.0",
     "express": "~4.15.5",
+    "express-validator": "^4.3.0",
     "hbs": "~4.0.1",
     "moment": "^2.20.1",
     "morgan": "~1.9.0",
