--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^3.1.0",
     "express": "~4.15.5",
     "express-validator": "^4.3.0",
+    "favicon": "^0.0.2",
     "hbs": "~4.0.1",
     "moment": "^2.20.1",
     "morgan": "~1.9.0",
